Make bug header information always visible

--- a/extensions/BugModal/web/bug_modal.css
+++ b/extensions/BugModal/web/bug_modal.css
@@ -351,6 +351,12 @@ input[type="number"] {
   margin-left: 5px;
 }
 
+#module-header {
+  position: sticky;
+  top: 0;
+  z-index: 10;
+}
+
 #module-security-content {
   padding: 8px;
 }
